--- a/index.html
+++ b/index.html
@@ -254,6 +254,11 @@
         border-radius: 4px;
         cursor: pointer;
     }
+    @media only screen and (max-width: 600px) {
+        .search-container {
+            height: 50%;
+        }
+    }
 </style>
 
 <div class="search-container">
