--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         height: 100vh;
         width: 100%;
         position: relative;
+        caret-color: transparent;
     }
     
     .search-bar {
